organized project pages in a folder

--- a/home.html
+++ b/home.html
@@ -190,8 +190,63 @@
 
                 <!-- divider -->
                 <div class="art-ls-divider1"></div>
-
-                <!-- links frame end -->
+                <!-- contact form -->
+                <form id="form" class="art-contact-form">
+                  <!-- form field -->
+                  <div class="art-form-field">
+                    <!-- name input -->
+                    <input
+                      id="name"
+                      name="name"
+                      class="art-input"
+                      type="text"
+                      placeholder="Name"
+                      required
+                    />
+                    <!-- label -->
+                    <label for="name"><i class="fas fa-user"></i></label>
+                  </div>
+                  <!-- form field end -->
+                  <!-- form field -->
+                  <div class="art-form-field">
+                    <!-- email input -->
+                    <input
+                      id="email"
+                      name="email"
+                      class="art-input"
+                      type="email"
+                      placeholder="Email"
+                      required
+                    />
+                    <!-- label -->
+                    <label for="email"><i class="fas fa-at"></i></label>
+                  </div>
+                  <!-- form field end -->
+                  <!-- form field -->
+                  <div class="art-form-field">
+                    <!-- message textarea -->
+                    <textarea
+                      id="message"
+                      name="text"
+                      class="art-input"
+                      placeholder="Message"
+                      required
+                    ></textarea>
+                    <!-- label -->
+                    <label for="message"><i class="far fa-envelope"></i></label>
+                  </div>
+                  <!-- form field end -->
+                  <!-- button -->
+                  <div class="art-submit-frame">
+                    <button class="art-btn art-btn-md art-submit" type="submit">
+                      <span>Send message</span>
+                    </button>
+                    <!-- success -->
+                    <div class="art-success">
+                      Success <i class="fas fa-check"></i>
+                    </div>
+                  </div>
+                </form>
               </div>
               <!-- scroll frame end -->
             </div>
@@ -329,7 +384,7 @@
                           <!-- button -->
                           <div class="art-buttons-frame">
                             <a
-                              href="/project1.html"
+                              href="/projects/project1.html"
                               class="art-link art-color-link art-w-chevron"
                               >More</a
                             >
@@ -358,7 +413,7 @@
                           <!-- button -->
                           <div class="art-buttons-frame">
                             <a
-                              href="/project2.html"
+                              href="/projects/project2.html"
                               class="art-link art-color-link art-w-chevron"
                               >More</a
                             >
